@@ -1,6 +1,7 @@
 16 June 2016: Wouter
 	- When tcp is more than half full, use short timeout for tcp session.
 	- Patch for {max,min}-{refresh,retry}-time from YAMAGUCHI Takanori.
+	- man page entries for max-refresh-time patch.
 
 15 June 2016: Wouter
 	- Fix build without IPv6, patch from Zdenek Kaspar.
